src/objects/ADvendio__CreativeVariable__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__CreativeTemplateVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creative Template Variable</label>
        <referenceTo>ADvendio__CreativeTemplateVariable__c</referenceTo>
        <relationshipLabel>Creative Variables</relationshipLabel>
        <relationshipName>CreativeVariables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Creative__c</fullName>
        <label>Creative</label>
        <referenceTo>ADvendio__Creative__c</referenceTo>
        <relationshipLabel>Creative Variables</relationshipLabel>
        <relationshipName>CreativeVariables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Creative Variable</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Creative Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creative Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>